--- a/packages/snaps-execution-environments/package.json
+++ b/packages/snaps-execution-environments/package.json
@@ -28,8 +28,8 @@
         "default": "./dist/index.cjs"
       }
     },
-    "./dist/browserify/node-process/bundle.js": "./dist/browserify/node-process/bundle.js",
-    "./dist/browserify/node-thread/bundle.js": "./dist/browserify/node-thread/bundle.js",
+    "./node-process": "./dist/webpack/node-process/bundle.js",
+    "./node-thread": "./dist/webpack/node-thread/bundle.js",
     "./package.json": "./package.json"
   },
   "main": "./dist/index.cjs",
@@ -41,8 +41,9 @@
   "scripts": {
     "auto-changelog-init": "auto-changelog init",
     "build": "ts-bridge --project tsconfig.build.json --verbose --clean --no-references",
-    "build:lavamoat": "lavamoat scripts/build.js --policy lavamoat/build-system/policy.json  --policyOverride lavamoat/build-system/policy-override.json",
-    "build:lavamoat:policy": "yarn build:lavamoat --writeAutoPolicy && node scripts/build.js --writeAutoPolicy",
+    "build:lavamoat": "lavamoat --policy lavamoat/build-system/policy.json  --override lavamoat/build-system/policy-override.json ./scripts/build.js",
+    "build:lavamoat:policy": "yarn build:lavamoat --writeAutoPolicy && LAVAMOAT_GENERATE_POLICY=true node scripts/build.js",
+    "build:lavamoat:test": "NODE_ENV=test yarn build:lavamoat",
     "build:post": "yarn build:lavamoat",
     "changelog:update": "../../scripts/update-changelog.sh @metamask/snaps-execution-environments",
     "changelog:validate": "../../scripts/validate-changelog.sh @metamask/snaps-execution-environments",
@@ -67,7 +68,7 @@
   "dependencies": {
     "@metamask/json-rpc-engine": "^10.0.2",
     "@metamask/object-multiplex": "^2.1.0",
-    "@metamask/post-message-stream": "^9.0.0",
+    "@metamask/post-message-stream": "^10.0.0",
     "@metamask/providers": "^22.1.0",
     "@metamask/rpc-errors": "^7.0.2",
     "@metamask/snaps-sdk": "workspace:^",
@@ -78,14 +79,11 @@
     "readable-stream": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-typescript": "^7.23.2",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@lavamoat/allow-scripts": "^3.0.4",
-    "@lavamoat/lavapack": "^6.1.1",
     "@lavamoat/lavatube": "^1.0.0",
+    "@lavamoat/webpack": "^0.9.0-beta.0",
     "@metamask/auto-changelog": "^5.0.2",
     "@swc/core": "1.3.78",
     "@swc/jest": "^0.2.26",
@@ -93,14 +91,13 @@
     "@ts-bridge/cli": "^0.6.1",
     "@types/jest": "^27.5.1",
     "@types/node": "18.14.2",
+    "@types/webpack-env": "^1.18.1",
     "@vitest/browser": "^3.1.1",
     "@vitest/coverage-v8": "^3.1.1",
-    "babel-plugin-tsconfig-paths-module-resolver": "^1.0.4",
-    "babelify": "^10.0.0",
-    "browserify": "^17.0.0",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
     "eslint": "^9.11.0",
+    "html-webpack-plugin": "^5.5.0",
     "istanbul-lib-coverage": "^3.2.0",
     "istanbul-lib-report": "^3.0.0",
     "istanbul-reports": "^3.1.5",
@@ -108,19 +105,22 @@
     "jest-environment-node": "^29.5.0",
     "jest-fetch-mock": "^3.0.3",
     "jest-silent-reporter": "^0.6.0",
-    "lavamoat": "^8.0.4",
-    "lavamoat-browserify": "^17.0.5",
+    "lavamoat": "^9.0.8",
     "prettier": "^3.3.3",
     "rimraf": "^4.1.2",
     "serve-handler": "^6.1.5",
     "ses": "^1.12.0",
+    "stream-browserify": "^3.0.0",
     "terser": "^5.17.7",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "~5.3.3",
     "vite": "^6.2.7",
     "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^3.1.1",
-    "yargs": "^17.7.1"
+    "webpack": "^5.97.1",
+    "webpack-merge": "^5.9.0"
   },
   "engines": {
     "node": "^18.16 || >=20"
