--- a/packages/examples/packages/bip32/snap.manifest.json
+++ b/packages/examples/packages/bip32/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "IiV8I8QSQ0Y2fXdR7NvSSbIO0sssXa9KBChzb/bj1kY=",
+    "shasum": "1Sbhc4TijR8/PeRuxdCEUXgSxUvbX56dsIxB+32fC1E=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -17,6 +17,10 @@
     }
   },
   "initialPermissions": {
+    "endowment:rpc": {
+      "dapps": true,
+      "snaps": true
+    },
     "snap_dialog": {},
     "snap_getBip32Entropy": [
       {
