Add `@lavamoat/*` to Dependabot allowlist

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,7 @@ updates:
       time: '06:00'
     allow:
       - dependency-name: '@metamask/*'
+      - dependency-name: '@lavamoat/*'
     target-branch: 'main'
     versioning-strategy: 'increase'
     open-pull-requests-limit: 10
