ci: Fix building execution environments for deployment (#3386)
Since building the execution environments with Webpack require the other
packages to be built, we modify the `publish-environment` workflow to
build the dependencies first.

---------

Co-authored-by: Maarten Zuidhoorn <maarten@zuidhoorn.com>

--- a/.github/workflows/publish-environment.yml
+++ b/.github/workflows/publish-environment.yml
@@ -23,7 +23,10 @@ jobs:
         uses: MetaMask/action-checkout-and-setup@v1
         with:
           is-high-risk-environment: true
-      - run: yarn build:lavamoat
+      - name: Build dependencies
+        run: yarn build:ci
+      - name: Build execution environments
+        run: yarn build:lavamoat
       - name: configure AWS credentials
         uses: aws-actions/configure-aws-credentials@e1e17a757e536f70e52b5a12b2e8d1d1c60e04ef
         with:
