--- a/packages/examples/packages/background-events/snap.manifest.json
+++ b/packages/examples/packages/background-events/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "JkxfWCWXhr3w0TQ1uOeUnBMnFNDW/ySnSx095kuYNiY=",
+    "shasum": "GQErgrmS3u8o7OH5qIy3LOgRi5Os5onPrITIHnJakTg=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -21,9 +21,7 @@
       "dapps": true,
       "snaps": false
     },
-    "endowment:cronjob": {
-      "jobs": []
-    },
+    "endowment:cronjob": {},
     "snap_dialog": {}
   },
   "platformVersion": "6.24.0",
