--- a/packages/examples/packages/cronjobs/snap.manifest.json
+++ b/packages/examples/packages/cronjobs/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "GBsFmhrUGP19NcPEOwTHqEk5OunNlHm220SfOeyuM0g=",
+    "shasum": "Mbea+uxM/yOVM7nlx2F2A02o+oWn0t8VVzs4e+iO2JI=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -17,10 +17,6 @@
     }
   },
   "initialPermissions": {
-    "endowment:rpc": {
-      "dapps": true,
-      "snaps": false
-    },
     "endowment:cronjob": {
       "jobs": [
         {
@@ -31,8 +27,7 @@
         }
       ]
     },
-    "snap_dialog": {},
-    "snap_notify": {}
+    "snap_dialog": {}
   },
   "platformVersion": "6.24.0",
   "manifestVersion": "0.1"
