--- a/packages/snaps-webpack-plugin/tsconfig.build.json
+++ b/packages/snaps-webpack-plugin/tsconfig.build.json
@@ -14,6 +14,9 @@
   ],
   "references": [
     {
+      "path": "../snaps-rpc-methods/tsconfig.build.json"
+    },
+    {
       "path": "../snaps-sdk/tsconfig.build.json"
     },
     {
