--- a/packages/snaps-webpack-plugin/package.json
+++ b/packages/snaps-webpack-plugin/package.json
@@ -61,6 +61,8 @@
     "@metamask/snaps-sdk": "workspace:^",
     "@metamask/snaps-utils": "workspace:^",
     "@metamask/utils": "^11.4.0",
+    "chalk": "^4.1.2",
+    "ora": "^5.4.1",
     "webpack-sources": "^3.2.3"
   },
   "devDependencies": {
