--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -98,6 +98,7 @@
     "@xstate/fsm": "^2.0.0",
     "async-mutex": "^0.5.0",
     "concat-stream": "^2.0.0",
+    "cron-parser": "^4.5.0",
     "fast-deep-equal": "^3.1.3",
     "get-npm-tarball-url": "^2.0.3",
     "immer": "^9.0.6",
