Update build targets

--- a/packages/examples/packages/webpack-plugin/.swcrc
+++ b/packages/examples/packages/webpack-plugin/.swcrc
@@ -4,7 +4,7 @@
     "parser": {
       "syntax": "typescript"
     },
-    "target": "es2021"
+    "target": "ES2022"
   },
   "module": {
     "type": "es6"
