--- a/packages/examples/packages/lifecycle-hooks/package.json
+++ b/packages/examples/packages/lifecycle-hooks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@metamask/lifecycle-hooks-example-snap",
   "version": "2.1.3",
-  "description": "MetaMask example snap demonstrating the use of the `onInstall` and `onUpdate` lifecycle hooks",
+  "description": "MetaMask example snap demonstrating the use of the `onStart`, `onInstall`, and `onUpdate` lifecycle hooks",
   "keywords": [
     "MetaMask",
     "Snaps",
