Add thresholds to coverage script and log coverage for merged report

--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -74,8 +74,7 @@
     "test:browser": "vitest",
     "test:browser:firefox": "vitest --config ./vitest.config.firefox.mts",
     "test:clean": "jest --clearCache",
-    "test:post": "ts-node scripts/coverage.ts && rimraf coverage/jest coverage/vite",
-    "test:pre": "yarn mkdirp test/fixtures && ./scripts/generate-fixtures.sh",
+    "test:post": "tsx ../../scripts/update-coverage.mts && rimraf coverage/jest coverage/vite",
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
   },
@@ -132,9 +131,6 @@
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
     "eslint": "^9.11.0",
-    "istanbul-lib-coverage": "^3.2.0",
-    "istanbul-lib-report": "^3.0.0",
-    "istanbul-reports": "^3.1.5",
     "jest": "^29.0.2",
     "jest-fetch-mock": "^3.0.3",
     "jest-silent-reporter": "^0.6.0",
@@ -142,6 +138,7 @@
     "prettier": "^3.3.3",
     "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
+    "tsx": "^4.19.1",
     "typescript": "~5.3.3",
     "vite": "^6.2.7",
     "vite-plugin-node-polyfills": "^0.23.0",
