--- a/packages/snaps-execution-environments/package.json
+++ b/packages/snaps-execution-environments/package.json
@@ -61,7 +61,7 @@
     "test:browser": "vitest",
     "test:browser:firefox": "vitest --config ./vitest.config.firefox.mts",
     "test:clean": "jest --clearCache",
-    "test:post": "ts-node scripts/coverage.ts && rimraf coverage/jest coverage/vite",
+    "test:post": "tsx ../../scripts/update-coverage.mts && rimraf coverage/jest coverage/vite",
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
   },
@@ -97,9 +97,6 @@
     "depcheck": "^1.4.7",
     "eslint": "^9.11.0",
     "html-webpack-plugin": "^5.5.0",
-    "istanbul-lib-coverage": "^3.2.0",
-    "istanbul-lib-report": "^3.0.0",
-    "istanbul-reports": "^3.1.5",
     "jest": "^29.0.2",
     "jest-environment-node": "^29.5.0",
     "jest-fetch-mock": "^3.0.3",
@@ -112,8 +109,8 @@
     "stream-browserify": "^3.0.0",
     "terser": "^5.17.7",
     "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
+    "tsx": "^4.19.1",
     "typescript": "~5.3.3",
     "vite": "^6.2.7",
     "vite-tsconfig-paths": "^4.0.5",
