--- a/package.json
+++ b/package.json
@@ -100,6 +100,9 @@
     "eslint-plugin-promise": "^7.1.0",
     "execa": "^5.1.1",
     "favicons": "^7.1.2",
+    "istanbul-lib-coverage": "^3.2.2",
+    "istanbul-lib-report": "^3.0.1",
+    "istanbul-reports": "^3.1.7",
     "jest": "^29.0.2",
     "jest-silent-reporter": "^0.6.0",
     "lint-staged": "^12.4.1",
