--- a/packages/snaps-utils/package.json
+++ b/packages/snaps-utils/package.json
@@ -73,7 +73,7 @@
     "test:browser": "vitest",
     "test:browser:firefox": "vitest --config ./vitest.config.firefox.mts",
     "test:clean": "jest --clearCache",
-    "test:post": "ts-node scripts/coverage.ts && rimraf coverage/jest coverage/vite",
+    "test:post": "tsx ../../scripts/update-coverage.mts && rimraf coverage/jest coverage/vite",
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
   },
@@ -121,16 +121,13 @@
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
     "eslint": "^9.11.0",
-    "istanbul-lib-coverage": "^3.2.0",
-    "istanbul-lib-report": "^3.0.0",
-    "istanbul-reports": "^3.1.5",
     "jest": "^29.0.2",
     "jest-fetch-mock": "^3.0.3",
     "jest-silent-reporter": "^0.6.0",
     "memfs": "^3.4.13",
     "prettier": "^3.3.3",
     "rimraf": "^4.1.2",
-    "ts-node": "^10.9.1",
+    "tsx": "^4.19.1",
     "typescript": "~5.3.3",
     "vite": "^6.2.7",
     "vite-plugin-node-polyfills": "^0.23.0",
