feat: Add support for `AssetSelector` and `AccountSelector` in `snaps-jest` (#3462)
This PR updates the snaps simulation to support `AssetSelector` and
`AccountSelector` while also refactoring the send flow example to use
those.

Fixes: #3436 #3437

--- a/packages/examples/packages/send-flow/snap.manifest.json
+++ b/packages/examples/packages/send-flow/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "/yjbhUdBhF3sOsQJ4WEy3T+lNtTh1L+B+zqoCoJ4EjQ=",
+    "shasum": "t2VeohT74VJief0KmSyEo1EJQV+DOgs5QFn1WtvgLww=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -21,7 +21,8 @@
       "dapps": true
     },
     "snap_dialog": {},
-    "endowment:page-home": {}
+    "endowment:page-home": {},
+    "snap_getPreferences": {}
   },
   "platformVersion": "8.1.0",
   "manifestVersion": "0.1"
