--- a/packages/snaps-execution-environments/package.json
+++ b/packages/snaps-execution-environments/package.json
@@ -80,9 +80,9 @@
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "@lavamoat/allow-scripts": "^3.3.3",
+    "@lavamoat/allow-scripts": "^3.3.4",
     "@lavamoat/lavatube": "^1.0.0",
-    "@lavamoat/webpack": "^0.9.0-beta.0",
+    "@lavamoat/webpack": "^1.0.0",
     "@metamask/auto-changelog": "^5.0.2",
     "@swc/core": "1.11.31",
     "@swc/jest": "^0.2.38",
@@ -101,7 +101,7 @@
     "jest-environment-node": "^29.5.0",
     "jest-fetch-mock": "^3.0.3",
     "jest-silent-reporter": "^0.6.0",
-    "lavamoat": "^9.0.8",
+    "lavamoat": "^9.0.10",
     "prettier": "^3.3.3",
     "rimraf": "^4.1.2",
     "serve-handler": "^6.1.5",
