Lint changelogs in CI

--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -126,6 +126,8 @@ jobs:
           is-high-risk-environment: false
       - name: Lint
         run: yarn lint
+      - name: Validate changelogs
+        run: yarn changelog:validate
       - name: Require clean working directory
         shell: bash
         run: |
