--- a/packages/create-snap/package.json
+++ b/packages/create-snap/package.json
@@ -68,6 +68,7 @@
     "ink": "^6.0.0",
     "ink-link": "^4.1.0",
     "ink-select-input": "^6.2.0",
+    "ink-spinner": "^5.0.0",
     "ink-text-input": "^6.0.0",
     "jotai": "^2.12.5",
     "react": "^19.1.0",
