--- a/packages/examples/packages/transaction-details-insights/snap.manifest.json
+++ b/packages/examples/packages/transaction-details-insights/snap.manifest.json
@@ -7,17 +7,19 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "xtETCsV7ar+PvDWsk8dW9mLv5BvG+cHlMf4H5GsJ9sA=",
+    "shasum": "ipcyhQ+XfczweWeRiLVEZ3XD2Azji4ymGZYVNvK7qgs=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
-        "packageName": "@metamask/insights-example-snap",
+        "packageName": "@metamask/transaction-details-insights-example-snap",
         "registry": "https://registry.npmjs.org/"
       }
     }
   },
   "initialPermissions": {
-    "endowment:transaction-insight": {}
+    "endowment:transaction-details": {
+      "allowTransactionDetailsOrigin": true
+    }
   },
   "platformVersion": "9.1.0",
   "manifestVersion": "0.1"
