--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -145,7 +145,7 @@
     "vitest": "^3.1.1"
   },
   "peerDependencies": {
-    "@metamask/snaps-execution-environments": "file:../snaps-execution-environments"
+    "@metamask/snaps-execution-environments": "*"
   },
   "peerDependenciesMeta": {
     "@metamask/snaps-execution-environments": {
