--- a/packages/snaps-simulation/package.json
+++ b/packages/snaps-simulation/package.json
@@ -71,6 +71,7 @@
     "@metamask/utils": "^11.4.2",
     "@reduxjs/toolkit": "^1.9.5",
     "fast-deep-equal": "^3.1.3",
+    "immer": "^9.0.21",
     "mime": "^3.0.0",
     "readable-stream": "^3.6.2",
     "redux-saga": "^1.2.3"
