--- a/packages/snaps-simulation/package.json
+++ b/packages/snaps-simulation/package.json
@@ -60,6 +60,7 @@
     "@metamask/json-rpc-engine": "^10.1.0",
     "@metamask/json-rpc-middleware-stream": "^8.0.8",
     "@metamask/key-tree": "^10.1.1",
+    "@metamask/messenger": "^0.1.0",
     "@metamask/permission-controller": "^11.0.6",
     "@metamask/phishing-controller": "^13.1.0",
     "@metamask/snaps-controllers": "workspace:^",
