--- a/packages/snaps-utils/package.json
+++ b/packages/snaps-utils/package.json
@@ -82,6 +82,7 @@
     "@babel/types": "^7.23.0",
     "@metamask/base-controller": "^8.4.1",
     "@metamask/key-tree": "^10.1.1",
+    "@metamask/messenger": "^0.1.0",
     "@metamask/permission-controller": "^11.0.6",
     "@metamask/rpc-errors": "^7.0.3",
     "@metamask/slip44": "^4.3.0",
