feat: Add new metadata to snaps controllers
The new metadata properties `includeInStateLogs` and `usedInUi` have
been added to all snaps controllers.

Relates to https://github.com/MetaMask/decisions/blob/main/decisions/core/0014-Expand-Controller-Metadata.md

--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -121,6 +121,7 @@
     "@types/concat-stream": "^2.0.0",
     "@types/gunzip-maybe": "^1.4.0",
     "@types/jest": "^27.5.1",
+    "@types/lodash": "^4",
     "@types/luxon": "^3",
     "@types/node": "18.14.2",
     "@types/readable-stream": "^4.0.15",
@@ -133,6 +134,7 @@
     "jest": "^29.0.2",
     "jest-fetch-mock": "^3.0.3",
     "jest-silent-reporter": "^0.6.0",
+    "lodash": "^4.17.21",
     "prettier": "^3.3.3",
     "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
