--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -18,4 +18,14 @@ plugins:
   - path: .yarn/plugins/local/plugin-workspaces-filter.js
   - path: .yarn/plugins/local/plugin-lifecycle-scripts.js
 
-yarnPath: .yarn/releases/yarn-4.4.1.cjs
+yarnPath: .yarn/releases/yarn-4.10.3.cjs
+
+# Configure the NPM minimal age gate to 3 days, meaning packages must be at
+# least 3 days old to be installed.
+npmMinimalAgeGate: 4320 # 3 days (in minutes)
+
+# Override the minimal age gate, allowing certain packages to be installed
+# regardless of their publish age.
+npmPreapprovedPackages:
+  - '@metamask/*'
+  - '@lavamoat/*'
