--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -86,7 +86,7 @@
     "@metamask/key-tree": "^10.1.1",
     "@metamask/messenger": "^0.3.0",
     "@metamask/object-multiplex": "^2.1.0",
-    "@metamask/permission-controller": "^11.0.6",
+    "@metamask/permission-controller": "patch:@metamask/permission-controller@npm%3A11.0.6#~/.yarn/patches/@metamask-permission-controller-npm-11.0.6-5b7ce789d2.patch",
     "@metamask/phishing-controller": "^13.1.0",
     "@metamask/post-message-stream": "^10.0.0",
     "@metamask/rpc-errors": "^7.0.3",
