--- a/packages/snaps-simulation/package.json
+++ b/packages/snaps-simulation/package.json
@@ -60,7 +60,7 @@
     "@metamask/json-rpc-middleware-stream": "^8.0.8",
     "@metamask/key-tree": "^10.1.1",
     "@metamask/messenger": "^0.3.0",
-    "@metamask/permission-controller": "patch:@metamask/permission-controller@npm%3A11.0.6#~/.yarn/patches/@metamask-permission-controller-npm-11.0.6-5b7ce789d2.patch",
+    "@metamask/permission-controller": "^12.0.0",
     "@metamask/phishing-controller": "^13.1.0",
     "@metamask/snaps-controllers": "workspace:^",
     "@metamask/snaps-execution-environments": "workspace:^",
