--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -79,13 +79,14 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/approval-controller": "^7.2.0",
-    "@metamask/base-controller": "^8.4.1",
+    "@metamask/approval-controller": "^8.0.0",
+    "@metamask/base-controller": "^9.0.0",
     "@metamask/json-rpc-engine": "^10.1.0",
     "@metamask/json-rpc-middleware-stream": "^8.0.8",
     "@metamask/key-tree": "^10.1.1",
+    "@metamask/messenger": "^0.3.0",
     "@metamask/object-multiplex": "^2.1.0",
-    "@metamask/permission-controller": "^11.0.6",
+    "@metamask/permission-controller": "^12.0.0",
     "@metamask/phishing-controller": "^13.1.0",
     "@metamask/post-message-stream": "^10.0.0",
     "@metamask/rpc-errors": "^7.0.3",
