--- a/packages/snaps-rpc-methods/package.json
+++ b/packages/snaps-rpc-methods/package.json
@@ -56,7 +56,7 @@
   },
   "dependencies": {
     "@metamask/key-tree": "^10.1.1",
-    "@metamask/permission-controller": "^11.0.6",
+    "@metamask/permission-controller": "^12.0.0",
     "@metamask/rpc-errors": "^7.0.3",
     "@metamask/snaps-sdk": "workspace:^",
     "@metamask/snaps-utils": "workspace:^",
@@ -68,6 +68,7 @@
     "@lavamoat/allow-scripts": "^3.4.0",
     "@metamask/auto-changelog": "^5.0.2",
     "@metamask/json-rpc-engine": "^10.1.0",
+    "@metamask/messenger": "^0.3.0",
     "@swc/core": "1.11.31",
     "@swc/jest": "^0.2.38",
     "@ts-bridge/cli": "^0.6.1",
