--- a/packages/snaps-simulation/package.json
+++ b/packages/snaps-simulation/package.json
@@ -55,12 +55,12 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/base-controller": "^8.4.1",
     "@metamask/eth-json-rpc-middleware": "^17.0.1",
     "@metamask/json-rpc-engine": "^10.1.0",
     "@metamask/json-rpc-middleware-stream": "^8.0.8",
     "@metamask/key-tree": "^10.1.1",
-    "@metamask/permission-controller": "^11.0.6",
+    "@metamask/messenger": "^0.3.0",
+    "@metamask/permission-controller": "^12.0.0",
     "@metamask/phishing-controller": "^13.1.0",
     "@metamask/snaps-controllers": "workspace:^",
     "@metamask/snaps-execution-environments": "workspace:^",
