--- a/packages/snaps-utils/package.json
+++ b/packages/snaps-utils/package.json
@@ -80,9 +80,9 @@
   "dependencies": {
     "@babel/core": "^7.23.2",
     "@babel/types": "^7.23.0",
-    "@metamask/base-controller": "^8.4.1",
     "@metamask/key-tree": "^10.1.1",
-    "@metamask/permission-controller": "^11.0.6",
+    "@metamask/messenger": "^0.3.0",
+    "@metamask/permission-controller": "^12.0.0",
     "@metamask/rpc-errors": "^7.0.3",
     "@metamask/slip44": "^4.3.0",
     "@metamask/snaps-registry": "^3.2.3",
