ci: Use platform specific caching for compat tests

--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -267,6 +267,7 @@ jobs:
         uses: MetaMask/action-checkout-and-setup@v1
         with:
           is-high-risk-environment: false
+          platform-specific-caching: true
       - name: Build dependencies
         run: yarn build:ci
       - name: Run tests
