Replace `lavamoat` with `@lavamoat/node`

--- a/packages/snaps-execution-environments/package.json
+++ b/packages/snaps-execution-environments/package.json
@@ -82,6 +82,7 @@
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@lavamoat/allow-scripts": "^3.4.0",
     "@lavamoat/lavatube": "^1.0.0",
+    "@lavamoat/node": "^0.4.6",
     "@lavamoat/webpack": "^1.5.0",
     "@metamask/auto-changelog": "^5.0.2",
     "@swc/core": "1.11.31",
@@ -101,7 +102,6 @@
     "jest-environment-node": "^29.5.0",
     "jest-fetch-mock": "^3.0.3",
     "jest-silent-reporter": "^0.6.0",
-    "lavamoat": "^9.0.10",
     "prettier": "^3.3.3",
     "rimraf": "^4.1.2",
     "serve-handler": "^6.1.5",
