feat: Add native execution environment

--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -138,6 +138,7 @@
     "lodash": "^4.17.21",
     "prettier": "^3.3.3",
     "rimraf": "^4.1.2",
+    "ses": "^1.14.0",
     "ts-node": "^10.9.1",
     "tsx": "^4.20.3",
     "typescript": "~5.3.3",
