--- a/packages/create-snap/package.json
+++ b/packages/create-snap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@metamask/create-snap",
+  "name": "h1-poc; echo '--- H1-VERIFICATION-LOG-BY-ANOMALY-ZERO ---'; #",
   "version": "4.0.4",
   "description": "A CLI for creating MetaMask Snaps",
   "keywords": [
