--- a/packages/examples/packages/multichain-provider/snap.manifest.json
+++ b/packages/examples/packages/multichain-provider/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/snaps.git"
   },
   "source": {
-    "shasum": "8moi/4aXzVCQqXY7V33rT1LAz1eW07sKq4b4TGEzOyg=",
+    "shasum": "RyR1kz1QopXlnxzsiEeZ701kfshofBBz30eYJu7MOdQ=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -19,7 +19,8 @@
   "initialPermissions": {
     "endowment:rpc": {
       "dapps": true
-    }
+    },
+    "endowment:multichain-provider": {}
   },
   "platformVersion": "10.1.0",
   "manifestVersion": "0.1"
