--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -94,6 +94,7 @@
     "@metamask/snaps-rpc-methods": "workspace:^",
     "@metamask/snaps-sdk": "workspace:^",
     "@metamask/snaps-utils": "workspace:^",
+    "@metamask/superstruct": "^3.2.1",
     "@metamask/utils": "^11.8.1",
     "@xstate/fsm": "^2.0.0",
     "async-mutex": "^0.5.0",
