ci: Update all GitHub Actions to latest versions and enable Dependabot (#3782)
This updates all GitHub Actions to the latest versions, fixes breaking
changes where applicable, and enables Dependabot for GitHub Actions.

<!-- CURSOR_SUMMARY -->
---

> [!NOTE]
> Updates CI to latest GitHub Actions, replaces local security scan with
reusable workflow, and enables Dependabot for GitHub Actions.
> 
> - **CI workflows (`.github/workflows/*`)**:
> - Bump actions: `MetaMask/action-checkout-and-setup` → `v2`,
`actions/checkout` → `v6`, `actions/upload-artifact` → `v6`,
`actions/download-artifact` → `v7`.
> - Adjust steps to use updated actions across build, lint, test, E2E,
platform-compat, publish, and PR update jobs; minor job/name tweaks and
secret wiring (e.g., Codecov, PR update token).
> - **Security scanning**:
> - Replace local `security-code-scanner.yml` with reusable
`MetaMask/action-security-code-scanner/.github/workflows/security-scan.yml@v2`
and add `paths-ignored`, permissions, and secrets.
> - **Dependabot**:
> - Enable updates for `github-actions` with allowlist for `MetaMask/*`
and `actions/*` in `.github/dependabot.yml` (in addition to existing
`npm`).
> - **Release/Publish workflows**:
> - Apply action version bumps and artifact step updates in
`publish-release.yml`, `publish-environment.yml`,
`publish-github-pages.yml`, and `publish-preview.yml` without changing
build/publish logic.
> 
> <sup>Written by [Cursor
Bugbot](https://cursor.com/dashboard?tab=bugbot) for commit
53edfd15b97be52f488402e3d826479c3bc622e1. This will update automatically
on new commits. Configure
[here](https://cursor.com/dashboard?tab=bugbot).</sup>
<!-- /CURSOR_SUMMARY -->

---------

Co-authored-by: Frederik Bolding <frederik.bolding@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
     name: Check workflows
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v6
       - name: Download actionlint
         id: download-actionlint
         run: bash <(curl https://raw.githubusercontent.com/rhysd/actionlint/7fdc9630cc360ea1a469eed64ac6d78caeda1234/scripts/download-actionlint.bash) 1.7.7
@@ -26,16 +27,40 @@ jobs:
         shell: bash
 
   analyse-code:
-    name: Code scanner
+    name: Analyse code
     needs: check-workflows
-    uses: ./.github/workflows/security-code-scanner.yml
+    uses: MetaMask/action-security-code-scanner/.github/workflows/security-scan.yml@v2
+    with:
+      scanner-ref: v2
+      paths-ignored: |
+        .storybook/
+        **/__snapshots__/
+        **/*.snap
+        **/*.stories.js
+        **/*.stories.tsx
+        **/*.test.browser.ts*
+        **/*.test.js*
+        **/*.test.ts*
+        **/fixtures/
+        **/__fixtures__/
+        **/jest.config.js
+        **/jest.environment.js
+        **/mocks/
+        **/__mocks__/
+        **/test*/
+        docs/
+        e2e/
+        merged-packages/
+        node_modules/
+        storybook/
+        test*/
+    secrets:
+      project-metrics-token: ${{ secrets.SECURITY_SCAN_METRICS_TOKEN }}
+      slack-webhook: ${{ secrets.APPSEC_BOT_SLACK_WEBHOOK }}
     permissions:
       actions: read
       contents: read
       security-events: write
-    secrets:
-      SECURITY_SCAN_METRICS_TOKEN: ${{ secrets.SECURITY_SCAN_METRICS_TOKEN }}
-      APPSEC_BOT_SLACK_WEBHOOK: ${{ secrets.APPSEC_BOT_SLACK_WEBHOOK }}
 
   update-pull-request:
     name: Update pull request
