--- a/packages/snaps-simulation/package.json
+++ b/packages/snaps-simulation/package.json
@@ -55,13 +55,13 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/eth-json-rpc-middleware": "^17.0.1",
     "@metamask/json-rpc-engine": "^10.1.0",
     "@metamask/json-rpc-middleware-stream": "^8.0.8",
     "@metamask/key-tree": "^10.1.1",
     "@metamask/messenger": "^0.3.0",
     "@metamask/permission-controller": "^12.1.1",
     "@metamask/phishing-controller": "^16.1.0",
+    "@metamask/rpc-errors": "^7.0.3",
     "@metamask/snaps-controllers": "workspace:^",
     "@metamask/snaps-execution-environments": "workspace:^",
     "@metamask/snaps-rpc-methods": "workspace:^",
@@ -70,6 +70,7 @@
     "@metamask/superstruct": "^3.2.1",
     "@metamask/utils": "^11.9.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "ethers": "^6.16.0",
     "fast-deep-equal": "^3.1.3",
     "immer": "^9.0.21",
     "mime": "^3.0.0",
