Support creating and using multichain API sessions

--- a/packages/snaps-simulation/package.json
+++ b/packages/snaps-simulation/package.json
@@ -55,6 +55,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@metamask/chain-agnostic-permission": "^1.4.0",
     "@metamask/json-rpc-engine": "^10.2.1",
     "@metamask/json-rpc-middleware-stream": "^8.0.8",
     "@metamask/key-tree": "^10.1.1",
